--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "scripts": {
     "dev": "concurrently \"npm run client\" \"npm run server\"",
     "client": "vite",
-    "server": "ts-node-dev --respawn --transpile-only server/server.ts", 
+    "server": "ts-node-dev --respawn --transpile-only server/server.ts",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/pg": "^8.15.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "path": "^0.12.7",
+    "pg": "^8.16.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0"
